Заметно улучшен жизненый цикл звонка и валидирования токенов и тд.